# herdr-simple-mcp

./: AGENTS.md  Cargo.toml  README.md  herdr-tools.yaml
skills/coordinator/herdr-overview/: SKILL.md
src/: config.rs  herdr.rs  main.rs  manifest.rs  server.rs
