[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package]
name = "herdr-simple-mcp"
version = "0.7.0"
edition = "2021"
description = "A thin, stateless MCP server that attaches directly to herdr's Unix-socket API"
license = "AGPL-3.0-only"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
